assets/css/style.css
/* ... */
  #call .buy-a-ticket {
    margin-top: 2em; }
    #call .buy-a-ticket .button {
      border-radius: 5px;
      background: linear, false, #ddd, #eee;
      color: #0b8c41;
      border: 1px solid #097436;
      border-bottom-color: #054520;
      -webkit-box-shadow: 0px 2px 0px #075c2b, inset 0 2px 0px #fff;
      -moz-box-shadow: 0px 2px 0px #075c2b, inset 0 2px 0px #fff;
      box-shadow: 0px 2px 0px #075c2b, inset 0 2px 0px #fff; }

#agenda {
  padding: 100px 0; }

#agenda .awesome.big.tba {
  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
  color: rgba(0, 0, 0, 0.05);
  font-size: 10em;
  line-height: 2em;
  text-align: center; }

#poznan {
  background: url(../img/poznan.jpg) no-repeat center;
  height: 600px;
  padding: 200px 0 0; }
  @media screen and (max-width: 40em) {
    #poznan {
      padding: 100px 0; } }

#venue-photos {
  display: block;
  background: #313d44; }
  #venue-photos:after {
    content: "";
    display: table;
    clear: both; }
  #venue-photos > li {
    float: left;
    width: 33%;
    position: relative; }
    @media screen and (min-width: 40em) and (max-width: 63.9375em) {
      #venue-photos > li {
        width: 50%; } }
    @media screen and (max-width: 40em) {
      #venue-photos > li {
        width: 100%; } }
    #venue-photos > li:before {
      content: "";
      display: block;
      padding-top: 66%; }
    #venue-photos > li.empty {
      background: #313d44; }
      @media screen and (min-width: 40em) and (max-width: 63.9375em) {
        #venue-photos > li.empty {
          display: none; } }
      @media screen and (max-width: 40em) {
        #venue-photos > li.empty {
          display: none; } }
    #venue-photos > li.photo {
      background-size: cover;
      background-repeat: no-repeat;
      background-position: center center; }
    #venue-photos > li .img {
      position: absolute;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0; }

#venue {
  display: none; }

#hotels {
  padding: 100px 0;
  background: #516570; }
  #hotels .row {
    max-width: 73.75em;
    margin-left: auto;
    margin-right: auto; }
    #hotels .row:after {
      content: "";
      display: table;
      clear: both; }
    #hotels .row .hotel {
      margin: 50px 0; }
      @media screen and (min-width: 77.5em) {
        #hotels .row .hotel {
          float: left;
          display: block;
          margin-right: 1.0101%;
          width: 29.29293%; }
          #hotels .row .hotel:last-child {
            margin-right: 0; }
          #hotels .row .hotel:nth-child(3n) {
            margin-right: 0; }
          #hotels .row .hotel:nth-child(3n+1) {
            clear: left; }
          #hotels .row .hotel:nth-child(3n+2), #hotels .row .hotel:nth-child(3n+3) {
            margin-left: 5.05051%; } }
      @media screen and (min-width: 64em) and (max-width: 77.5em) {
        #hotels .row .hotel {
          float: left;
          display: block;
          margin-right: 1.0101%;
          width: 19.19192%; }
          #hotels .row .hotel:last-child {
            margin-right: 0; }
          #hotels .row .hotel:nth-child(3n) {
            margin-right: 0; }
          #hotels .row .hotel:nth-child(3n+1) {
            clear: left; } }
      @media screen and (min-width: 40em) and (max-width: 63.9375em) {
        #hotels .row .hotel {
          float: left;
          display: block;
          margin-right: 1.0101%;
          width: 29.29293%; }
          #hotels .row .hotel:last-child {
            margin-right: 0; }
          #hotels .row .hotel:nth-child(2n) {
            margin-right: 0; }
          #hotels .row .hotel:nth-child(2n+1) {
            clear: left; } }
      @media screen and (min-width: 40em) and (max-width: 63.9375em) {
        #hotels .row .hotel {
          width: 100%; } }
      #hotels .row .hotel h4 {
        font-size: 1rem;
        margin: 1em 0 0; }
      #hotels .row .hotel table {
        font-size: 0.875em; }
        #hotels .row .hotel table td {
          border-bottom: 1px solid rgba(255, 255, 255, 0.2) !important; }
          #hotels .row .hotel table td.price {
            text-align: right; }
      #hotels .row .hotel ul li {
        display: inline-block;
        margin-right: 1ex; }
        #hotels .row .hotel ul li a {
          font-size: 14px;
          font-weight: 500;
          text-decoration: underline; }

#terms {
  padding: 100px 0; }
  #terms h2 {
    color: #666;
    margin: 0 0 1em; }
  #terms .row {
    display: block; }
    #terms .row:after {
      content: "";
      display: table;
      clear: both; }
    @media screen and (min-width: 77.5em) {
      #terms .row .column {
        float: left;
        display: block;
        margin-right: 1.0101%;
        width: 29.29293%; }
        #terms .row .column:last-child {
          margin-right: 0; } }
    @media screen and (min-width: 64em) and (max-width: 77.5em) {
      #terms .row .column {
        float: left;
        display: block;
        margin-right: 1.0101%;
        width: 19.19192%; }
        #terms .row .column:last-child {
          margin-right: 0; } }
    @media screen and (min-width: 77.5em) {
      #terms .row .column:first-of-type {
        margin-left: 5.05051%; } }
    @media screen and (min-width: 40em) and (max-width: 63.9375em) {
      #terms .row .column {
        width: 100%; } }
    @media screen and (max-width: 40em) {
      #terms .row .column {
        width: 100%; } }
    #terms .row .column h5 {
      color: #bbb;
      text-align: center;
      font-family: "Raleway";
      margin-bottom: 1.3em; }
      #terms .row .column h5 em {
        font-style: normal;
        display: block;
        text-align: center;
        margin: 0 auto 10px;
        width: 40px;
        height: 40px;
        border: 1px solid #ccc;
        border-radius: 100%;
        line-height: 41px;
        color: #bbb;
        font-family: "Raleway"; }
/* ... */

